dataset1235/2025-2/1955397009/users/3283679446/executions/1107611404_1626817775.log
== RUN (2025-08-15 21:56:13)
-- CODE: 
import math

raio = float(input("Informe o valor de raio: "))

print(math.pi * raio)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Informe o valor de raio: 0.3141592653589793
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Informe o valor de raio: 14.137166941154069
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Informe o valor de raio: 38.767253345298045
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Informe o valor de raio: 34.55751918948772
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Informe o valor de raio: 211.5548492927367
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Informe o valor de raio: 6.283185307179586
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 22:22:29)
-- CODE: 
import math

raio = float(input("Informe o valor de raio: "))

print(round(math.pi * raio**2, 3))
print(round(math.pi * 4/3 * raio**3, 3))



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 21:49:17)
-- CODE: 
import math

raio = float(input("Informe o valor de raio: "))

print(pi * raio)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(pi * raio)
          ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 21:56:00)
-- CODE: 
import 

raio = float(input("Informe o valor de raio: "))

print(math.pi * raio)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 22:22:22)
-- CODE: 
import math

raio = float(input("Informe o valor de raio: "))

print(round(math.pi * raio**2, 3))
print(round(math.pi * 4/3 * raio**3, 3))



-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 21:58:21)
-- CODE: 
import math

raio = float(input("Informe o valor de raio: "))

print(round(math.pi * raio, 3))



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Informe o valor de raio: 0.314
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Informe o valor de raio: 14.137
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Informe o valor de raio: 38.767
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Informe o valor de raio: 34.558
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Informe o valor de raio: 211.555
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Informe o valor de raio: 6.283
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 21:55:59)
-- CODE: 
import 

raio = float(input("Informe o valor de raio: "))

print(math.pi * raio)



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 1
    import 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
